--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "axios": "^0.27.2",  // Updated version for axios
-    "react": "^18.2.0",   // Updated to the latest stable version
-    "react-dom": "^18.2.0",  // Updated to the latest stable version
+    "axios": "^0.27.2",  
+    "react": "^18.2.0",   
+    "react-dom": "^18.2.0",  
     "react-scripts": "^5.0.1"
   },
   "eslintConfig": {
